Fix minefield container spacing

--- a/style.scss
+++ b/style.scss
@@ -54,7 +54,7 @@ main {
 
 .card {
   background: $primary;
-  margin: 30px 0;
+  margin: 30px 5px;
   padding: 3px;
 
   .card-header {
